@@ -1,3 +1,12 @@
+2010-08-09  Cary Coutant  <ccoutant@google.com>
+
+	* as.c (show_usage): Don't list --compress-debug-sections if zlib not
+	installed.
+	(main): Warn if --compress-debug-sections requested and zlib not
+	installed.
+	* doc/as.texinfo: Add --compress-debug-sections,
+	--nocompress-debug-sections.
+
 2010-08-06  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config/tc-i386.c (set_cpu_arch): Re-indent.
